--- a/Web/index.html
+++ b/Web/index.html
@@ -95,11 +95,19 @@
 <div><img src="../Figures/map32.png"></div>
 <div><img src="../Figures/map33.png"></div>
 <div><img src="../Figures/map34.png"></div>
+<div><img src="../Figures/map35.png"></div>
+<div><img src="../Figures/map36.png"></div>
+<div><img src="../Figures/map37.png"></div>
+<div><img src="../Figures/map38.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
