--- a/Web/index.html
+++ b/Web/index.html
@@ -99,11 +99,15 @@
 <div><img src="../Figures/map36.png"></div>
 <div><img src="../Figures/map37.png"></div>
 <div><img src="../Figures/map38.png"></div>
+<div><img src="../Figures/map39.png"></div>
+<div><img src="../Figures/map40.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
