--- a/Web/index.html
+++ b/Web/index.html
@@ -101,11 +101,15 @@
 <div><img src="../Figures/map38.png"></div>
 <div><img src="../Figures/map39.png"></div>
 <div><img src="../Figures/map40.png"></div>
+<div><img src="../Figures/map41.png"></div>
+<div><img src="../Figures/map42.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
