--- a/Web/index.html
+++ b/Web/index.html
@@ -103,11 +103,15 @@
 <div><img src="../Figures/map40.png"></div>
 <div><img src="../Figures/map41.png"></div>
 <div><img src="../Figures/map42.png"></div>
+<div><img src="../Figures/map43.png"></div>
+<div><img src="../Figures/map44.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
