--- a/Web/index.html
+++ b/Web/index.html
@@ -105,11 +105,15 @@
 <div><img src="../Figures/map42.png"></div>
 <div><img src="../Figures/map43.png"></div>
 <div><img src="../Figures/map44.png"></div>
+<div><img src="../Figures/map45.png"></div>
+<div><img src="../Figures/map46.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
