--- a/Web/index.html
+++ b/Web/index.html
@@ -61,57 +61,65 @@
 <body>
     <div class="demo">
         <div class="slides">
-            <div><img src="../Figures/map01.png"></div>
-<div><img src="../Figures/map02.png"></div>
-<div><img src="../Figures/map03.png"></div>
-<div><img src="../Figures/map04.png"></div>
-<div><img src="../Figures/map05.png"></div>
-<div><img src="../Figures/map06.png"></div>
-<div><img src="../Figures/map07.png"></div>
-<div><img src="../Figures/map08.png"></div>
-<div><img src="../Figures/map09.png"></div>
-<div><img src="../Figures/map10.png"></div>
-<div><img src="../Figures/map11.png"></div>
-<div><img src="../Figures/map12.png"></div>
-<div><img src="../Figures/map13.png"></div>
-<div><img src="../Figures/map14.png"></div>
-<div><img src="../Figures/map15.png"></div>
-<div><img src="../Figures/map16.png"></div>
-<div><img src="../Figures/map17.png"></div>
-<div><img src="../Figures/map18.png"></div>
-<div><img src="../Figures/map19.png"></div>
-<div><img src="../Figures/map20.png"></div>
-<div><img src="../Figures/map21.png"></div>
-<div><img src="../Figures/map22.png"></div>
-<div><img src="../Figures/map23.png"></div>
-<div><img src="../Figures/map24.png"></div>
-<div><img src="../Figures/map25.png"></div>
-<div><img src="../Figures/map26.png"></div>
-<div><img src="../Figures/map27.png"></div>
-<div><img src="../Figures/map28.png"></div>
-<div><img src="../Figures/map29.png"></div>
-<div><img src="../Figures/map30.png"></div>
-<div><img src="../Figures/map31.png"></div>
-<div><img src="../Figures/map32.png"></div>
-<div><img src="../Figures/map33.png"></div>
-<div><img src="../Figures/map34.png"></div>
-<div><img src="../Figures/map35.png"></div>
-<div><img src="../Figures/map36.png"></div>
-<div><img src="../Figures/map37.png"></div>
-<div><img src="../Figures/map38.png"></div>
-<div><img src="../Figures/map39.png"></div>
-<div><img src="../Figures/map40.png"></div>
-<div><img src="../Figures/map41.png"></div>
-<div><img src="../Figures/map42.png"></div>
-<div><img src="../Figures/map43.png"></div>
-<div><img src="../Figures/map44.png"></div>
-<div><img src="../Figures/map45.png"></div>
-<div><img src="../Figures/map46.png"></div>
+            <div><img src="../outbrake_predictions/map01.png"></div>
+<div><img src="../outbrake_predictions/map02.png"></div>
+<div><img src="../outbrake_predictions/map03.png"></div>
+<div><img src="../outbrake_predictions/map04.png"></div>
+<div><img src="../outbrake_predictions/map05.png"></div>
+<div><img src="../outbrake_predictions/map06.png"></div>
+<div><img src="../outbrake_predictions/map07.png"></div>
+<div><img src="../outbrake_predictions/map08.png"></div>
+<div><img src="../outbrake_predictions/map09.png"></div>
+<div><img src="../outbrake_predictions/map10.png"></div>
+<div><img src="../outbrake_predictions/map11.png"></div>
+<div><img src="../outbrake_predictions/map12.png"></div>
+<div><img src="../outbrake_predictions/map13.png"></div>
+<div><img src="../outbrake_predictions/map14.png"></div>
+<div><img src="../outbrake_predictions/map15.png"></div>
+<div><img src="../outbrake_predictions/map16.png"></div>
+<div><img src="../outbrake_predictions/map17.png"></div>
+<div><img src="../outbrake_predictions/map18.png"></div>
+<div><img src="../outbrake_predictions/map19.png"></div>
+<div><img src="../outbrake_predictions/map20.png"></div>
+<div><img src="../outbrake_predictions/map21.png"></div>
+<div><img src="../outbrake_predictions/map22.png"></div>
+<div><img src="../outbrake_predictions/map23.png"></div>
+<div><img src="../outbrake_predictions/map24.png"></div>
+<div><img src="../outbrake_predictions/map25.png"></div>
+<div><img src="../outbrake_predictions/map26.png"></div>
+<div><img src="../outbrake_predictions/map27.png"></div>
+<div><img src="../outbrake_predictions/map28.png"></div>
+<div><img src="../outbrake_predictions/map29.png"></div>
+<div><img src="../outbrake_predictions/map30.png"></div>
+<div><img src="../outbrake_predictions/map31.png"></div>
+<div><img src="../outbrake_predictions/map32.png"></div>
+<div><img src="../outbrake_predictions/map33.png"></div>
+<div><img src="../outbrake_predictions/map34.png"></div>
+<div><img src="../outbrake_predictions/map35.png"></div>
+<div><img src="../outbrake_predictions/map36.png"></div>
+<div><img src="../outbrake_predictions/map37.png"></div>
+<div><img src="../outbrake_predictions/map38.png"></div>
+<div><img src="../outbrake_predictions/map39.png"></div>
+<div><img src="../outbrake_predictions/map40.png"></div>
+<div><img src="../outbrake_predictions/map41.png"></div>
+<div><img src="../outbrake_predictions/map42.png"></div>
+<div><img src="../outbrake_predictions/map43.png"></div>
+<div><img src="../outbrake_predictions/map44.png"></div>
+<div><img src="../outbrake_predictions/map45.png"></div>
+<div><img src="../outbrake_predictions/map46.png"></div>
+<div><img src="../outbrake_predictions/map47.png"></div>
+<div><img src="../outbrake_predictions/map48.png"></div>
+<div><img src="../outbrake_predictions/map49.png"></div>
+<div><img src="../outbrake_predictions/map50.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
