Update week 18-24 May

--- a/Web/index.html
+++ b/Web/index.html
@@ -111,11 +111,33 @@
 <div><img src="../outbrake_predictions/map48.png"></div>
 <div><img src="../outbrake_predictions/map49.png"></div>
 <div><img src="../outbrake_predictions/map50.png"></div>
+<div><img src="../outbrake_predictions/map51.png"></div>
+<div><img src="../outbrake_predictions/map52.png"></div>
+<div><img src="../outbrake_predictions/map53.png"></div>
+<div><img src="../outbrake_predictions/map54.png"></div>
+<div><img src="../outbrake_predictions/map55.png"></div>
+<div><img src="../outbrake_predictions/map56.png"></div>
+<div><img src="../outbrake_predictions/map57.png"></div>
+<div><img src="../outbrake_predictions/map58.png"></div>
+<div><img src="../outbrake_predictions/map59.png"></div>
+<div><img src="../outbrake_predictions/map60.png"></div>
+<div><img src="../outbrake_predictions/map61.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
