Update week 26-29 May

--- a/Web/index.html
+++ b/Web/index.html
@@ -122,11 +122,21 @@
 <div><img src="../outbrake_predictions/map59.png"></div>
 <div><img src="../outbrake_predictions/map60.png"></div>
 <div><img src="../outbrake_predictions/map61.png"></div>
+<div><img src="../outbrake_predictions/map62.png"></div>
+<div><img src="../outbrake_predictions/map63.png"></div>
+<div><img src="../outbrake_predictions/map64.png"></div>
+<div><img src="../outbrake_predictions/map65.png"></div>
+<div><img src="../outbrake_predictions/map66.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
