Update week 30 May-04 June

--- a/Web/index.html
+++ b/Web/index.html
@@ -127,11 +127,23 @@
 <div><img src="../outbrake_predictions/map64.png"></div>
 <div><img src="../outbrake_predictions/map65.png"></div>
 <div><img src="../outbrake_predictions/map66.png"></div>
+<div><img src="../outbrake_predictions/map67.png"></div>
+<div><img src="../outbrake_predictions/map68.png"></div>
+<div><img src="../outbrake_predictions/map69.png"></div>
+<div><img src="../outbrake_predictions/map70.png"></div>
+<div><img src="../outbrake_predictions/map71.png"></div>
+<div><img src="../outbrake_predictions/map72.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
