New predictions untill 06.11 and animated gif only from June as all the areas are clean

--- a/Web/index.html
+++ b/Web/index.html
@@ -133,11 +133,25 @@
 <div><img src="../outbrake_predictions/map70.png"></div>
 <div><img src="../outbrake_predictions/map71.png"></div>
 <div><img src="../outbrake_predictions/map72.png"></div>
+<div><img src="../outbrake_predictions/map73.png"></div>
+<div><img src="../outbrake_predictions/map74.png"></div>
+<div><img src="../outbrake_predictions/map75.png"></div>
+<div><img src="../outbrake_predictions/map76.png"></div>
+<div><img src="../outbrake_predictions/map77.png"></div>
+<div><img src="../outbrake_predictions/map78.png"></div>
+<div><img src="../outbrake_predictions/map79.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
