Predictions based on the whole month of June are published

--- a/Web/index.html
+++ b/Web/index.html
@@ -140,11 +140,59 @@
 <div><img src="../outbrake_predictions/map77.png"></div>
 <div><img src="../outbrake_predictions/map78.png"></div>
 <div><img src="../outbrake_predictions/map79.png"></div>
+<div><img src="../outbrake_predictions/map80.png"></div>
+<div><img src="../outbrake_predictions/map81.png"></div>
+<div><img src="../outbrake_predictions/map82.png"></div>
+<div><img src="../outbrake_predictions/map83.png"></div>
+<div><img src="../outbrake_predictions/map84.png"></div>
+<div><img src="../outbrake_predictions/map85.png"></div>
+<div><img src="../outbrake_predictions/map86.png"></div>
+<div><img src="../outbrake_predictions/map87.png"></div>
+<div><img src="../outbrake_predictions/map88.png"></div>
+<div><img src="../outbrake_predictions/map89.png"></div>
+<div><img src="../outbrake_predictions/map90.png"></div>
+<div><img src="../outbrake_predictions/map91.png"></div>
+<div><img src="../outbrake_predictions/map92.png"></div>
+<div><img src="../outbrake_predictions/map93.png"></div>
+<div><img src="../outbrake_predictions/map94.png"></div>
+<div><img src="../outbrake_predictions/map95.png"></div>
+<div><img src="../outbrake_predictions/map96.png"></div>
+<div><img src="../outbrake_predictions/map97.png"></div>
+<div><img src="../outbrake_predictions/map98.png"></div>
+<div><img src="../outbrake_predictions/map99.png"></div>
+<div><img src="../outbrake_predictions/map100.png"></div>
+<div><img src="../outbrake_predictions/map101.png"></div>
+<div><img src="../outbrake_predictions/map102.png"></div>
+<div><img src="../outbrake_predictions/map103.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
