Predictions based on data from 01 to 20 July

--- a/Web/index.html
+++ b/Web/index.html
@@ -164,11 +164,51 @@
 <div><img src="../outbrake_predictions/map101.png"></div>
 <div><img src="../outbrake_predictions/map102.png"></div>
 <div><img src="../outbrake_predictions/map103.png"></div>
+<div><img src="../outbrake_predictions/map104.png"></div>
+<div><img src="../outbrake_predictions/map105.png"></div>
+<div><img src="../outbrake_predictions/map106.png"></div>
+<div><img src="../outbrake_predictions/map107.png"></div>
+<div><img src="../outbrake_predictions/map108.png"></div>
+<div><img src="../outbrake_predictions/map109.png"></div>
+<div><img src="../outbrake_predictions/map110.png"></div>
+<div><img src="../outbrake_predictions/map111.png"></div>
+<div><img src="../outbrake_predictions/map112.png"></div>
+<div><img src="../outbrake_predictions/map113.png"></div>
+<div><img src="../outbrake_predictions/map114.png"></div>
+<div><img src="../outbrake_predictions/map115.png"></div>
+<div><img src="../outbrake_predictions/map116.png"></div>
+<div><img src="../outbrake_predictions/map117.png"></div>
+<div><img src="../outbrake_predictions/map118.png"></div>
+<div><img src="../outbrake_predictions/map119.png"></div>
+<div><img src="../outbrake_predictions/map120.png"></div>
+<div><img src="../outbrake_predictions/map121.png"></div>
+<div><img src="../outbrake_predictions/map122.png"></div>
+<div><img src="../outbrake_predictions/map123.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
