Predictions based on data from 21 to 31 of July

--- a/Web/index.html
+++ b/Web/index.html
@@ -184,11 +184,33 @@
 <div><img src="../outbrake_predictions/map121.png"></div>
 <div><img src="../outbrake_predictions/map122.png"></div>
 <div><img src="../outbrake_predictions/map123.png"></div>
+<div><img src="../outbrake_predictions/map124.png"></div>
+<div><img src="../outbrake_predictions/map125.png"></div>
+<div><img src="../outbrake_predictions/map126.png"></div>
+<div><img src="../outbrake_predictions/map127.png"></div>
+<div><img src="../outbrake_predictions/map128.png"></div>
+<div><img src="../outbrake_predictions/map129.png"></div>
+<div><img src="../outbrake_predictions/map130.png"></div>
+<div><img src="../outbrake_predictions/map131.png"></div>
+<div><img src="../outbrake_predictions/map132.png"></div>
+<div><img src="../outbrake_predictions/map133.png"></div>
+<div><img src="../outbrake_predictions/map134.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
