Predictions based on data from 1 to 15 of August

--- a/Web/index.html
+++ b/Web/index.html
@@ -195,11 +195,41 @@
 <div><img src="../outbrake_predictions/map132.png"></div>
 <div><img src="../outbrake_predictions/map133.png"></div>
 <div><img src="../outbrake_predictions/map134.png"></div>
+<div><img src="../outbrake_predictions/map135.png"></div>
+<div><img src="../outbrake_predictions/map136.png"></div>
+<div><img src="../outbrake_predictions/map137.png"></div>
+<div><img src="../outbrake_predictions/map138.png"></div>
+<div><img src="../outbrake_predictions/map139.png"></div>
+<div><img src="../outbrake_predictions/map140.png"></div>
+<div><img src="../outbrake_predictions/map141.png"></div>
+<div><img src="../outbrake_predictions/map142.png"></div>
+<div><img src="../outbrake_predictions/map143.png"></div>
+<div><img src="../outbrake_predictions/map144.png"></div>
+<div><img src="../outbrake_predictions/map145.png"></div>
+<div><img src="../outbrake_predictions/map146.png"></div>
+<div><img src="../outbrake_predictions/map147.png"></div>
+<div><img src="../outbrake_predictions/map148.png"></div>
+<div><img src="../outbrake_predictions/map149.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
