Predictions based on data from 16 to 31 of August

--- a/Web/index.html
+++ b/Web/index.html
@@ -210,11 +210,43 @@
 <div><img src="../outbrake_predictions/map147.png"></div>
 <div><img src="../outbrake_predictions/map148.png"></div>
 <div><img src="../outbrake_predictions/map149.png"></div>
+<div><img src="../outbrake_predictions/map150.png"></div>
+<div><img src="../outbrake_predictions/map151.png"></div>
+<div><img src="../outbrake_predictions/map152.png"></div>
+<div><img src="../outbrake_predictions/map153.png"></div>
+<div><img src="../outbrake_predictions/map154.png"></div>
+<div><img src="../outbrake_predictions/map155.png"></div>
+<div><img src="../outbrake_predictions/map156.png"></div>
+<div><img src="../outbrake_predictions/map157.png"></div>
+<div><img src="../outbrake_predictions/map158.png"></div>
+<div><img src="../outbrake_predictions/map159.png"></div>
+<div><img src="../outbrake_predictions/map160.png"></div>
+<div><img src="../outbrake_predictions/map161.png"></div>
+<div><img src="../outbrake_predictions/map162.png"></div>
+<div><img src="../outbrake_predictions/map163.png"></div>
+<div><img src="../outbrake_predictions/map164.png"></div>
+<div><img src="../outbrake_predictions/map165.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
