Figure Web/index.html created

--- a/Web/index.html
+++ b/Web/index.html
@@ -226,11 +226,127 @@
 <div><img src="../outbrake_predictions/map163.png"></div>
 <div><img src="../outbrake_predictions/map164.png"></div>
 <div><img src="../outbrake_predictions/map165.png"></div>
+<div><img src="../outbrake_predictions/map166.png"></div>
+<div><img src="../outbrake_predictions/map167.png"></div>
+<div><img src="../outbrake_predictions/map168.png"></div>
+<div><img src="../outbrake_predictions/map169.png"></div>
+<div><img src="../outbrake_predictions/map170.png"></div>
+<div><img src="../outbrake_predictions/map171.png"></div>
+<div><img src="../outbrake_predictions/map172.png"></div>
+<div><img src="../outbrake_predictions/map173.png"></div>
+<div><img src="../outbrake_predictions/map174.png"></div>
+<div><img src="../outbrake_predictions/map175.png"></div>
+<div><img src="../outbrake_predictions/map176.png"></div>
+<div><img src="../outbrake_predictions/map177.png"></div>
+<div><img src="../outbrake_predictions/map178.png"></div>
+<div><img src="../outbrake_predictions/map179.png"></div>
+<div><img src="../outbrake_predictions/map180.png"></div>
+<div><img src="../outbrake_predictions/map181.png"></div>
+<div><img src="../outbrake_predictions/map182.png"></div>
+<div><img src="../outbrake_predictions/map183.png"></div>
+<div><img src="../outbrake_predictions/map184.png"></div>
+<div><img src="../outbrake_predictions/map185.png"></div>
+<div><img src="../outbrake_predictions/map186.png"></div>
+<div><img src="../outbrake_predictions/map187.png"></div>
+<div><img src="../outbrake_predictions/map188.png"></div>
+<div><img src="../outbrake_predictions/map189.png"></div>
+<div><img src="../outbrake_predictions/map190.png"></div>
+<div><img src="../outbrake_predictions/map191.png"></div>
+<div><img src="../outbrake_predictions/map192.png"></div>
+<div><img src="../outbrake_predictions/map193.png"></div>
+<div><img src="../outbrake_predictions/map194.png"></div>
+<div><img src="../outbrake_predictions/map195.png"></div>
+<div><img src="../outbrake_predictions/map196.png"></div>
+<div><img src="../outbrake_predictions/map197.png"></div>
+<div><img src="../outbrake_predictions/map198.png"></div>
+<div><img src="../outbrake_predictions/map199.png"></div>
+<div><img src="../outbrake_predictions/map200.png"></div>
+<div><img src="../outbrake_predictions/map201.png"></div>
+<div><img src="../outbrake_predictions/map202.png"></div>
+<div><img src="../outbrake_predictions/map203.png"></div>
+<div><img src="../outbrake_predictions/map204.png"></div>
+<div><img src="../outbrake_predictions/map205.png"></div>
+<div><img src="../outbrake_predictions/map206.png"></div>
+<div><img src="../outbrake_predictions/map207.png"></div>
+<div><img src="../outbrake_predictions/map208.png"></div>
+<div><img src="../outbrake_predictions/map209.png"></div>
+<div><img src="../outbrake_predictions/map210.png"></div>
+<div><img src="../outbrake_predictions/map211.png"></div>
+<div><img src="../outbrake_predictions/map212.png"></div>
+<div><img src="../outbrake_predictions/map213.png"></div>
+<div><img src="../outbrake_predictions/map214.png"></div>
+<div><img src="../outbrake_predictions/map215.png"></div>
+<div><img src="../outbrake_predictions/map216.png"></div>
+<div><img src="../outbrake_predictions/map217.png"></div>
+<div><img src="../outbrake_predictions/map218.png"></div>
+<div><img src="../outbrake_predictions/map219.png"></div>
+<div><img src="../outbrake_predictions/map220.png"></div>
+<div><img src="../outbrake_predictions/map221.png"></div>
+<div><img src="../outbrake_predictions/map222.png"></div>
+<div><img src="../outbrake_predictions/map223.png"></div>
         </div>
     </div>
     <div>
         <div class="out-nav">
             <i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
+<i></i> 
 <i></i> 
 <i></i> 
 <i></i> 
